buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.9.0"
    }
}
plugins {
    id "com.diffplug.gradle.spotless" version "3.20.0"
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'idea'
    id 'eclipse'
    id "edu.wpi.first.GradleRIO" version "2019.2.1"
}

allprojects {
    apply plugin: "com.jfrog.artifactory"
}


def usr = hasProperty('artifactory_user') ? artifactory_user : System.getenv('artifactory_user')
def pwd = hasProperty('artifactory_password') ? artifactory_password : System.getenv('artifactory_password')



def snapshot = true

group = 'org.montclairrobotics'
version = "FRC-0.0.1${snapshot ? "-SNAPSHOT" : ""}"

description = """Alloy"""

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
    maven { url "http://repo.maven.apache.org/maven2" }
    jcenter()
}

dependencies{
    implementation wpi.deps.wpilib()
    implementation wpi.deps.vendor.java()
    testCompile 'junit:junit:4.12'
    implementation fileTree(dir: "src/main/libs/", include: ['*.jar'])
    implementation 'org.reflections:reflections:0.9.11'
}


spotless {
    java {
        googleJavaFormat().aosp()
        licenseHeaderFile 'SpotlessLicense'
        // paddedCell()
    }
}


publishing {
    publications {
        Alloy(MavenPublication) {
            from components.java
        }
    }
}


artifactory {
    contextUrl = "http://67.205.146.144:8081/artifactory"   //The base Artifactory URL if not overridden by the publisher/resolver
    publish {
        repository {
            repoKey = "libs-${snapshot ? "snapshot" : "release"}-local"
            username = "${usr}"
            password = "${pwd}"
            maven = true

        }
        defaults{
            publications('Alloy')
            publishPom = true
        }
    }
}

